@@ -8,7 +8,7 @@ EXTRA_DIST = $(fonts_DATA)
 
 install: install-data-am
 	@echo "Preparing fontdir..." ; \
-	cd $(prefix)/lib/vice/fonts ; \
+	cd $(DESTDIR)$(prefix)/lib/vice/fonts ; \
 	bdftopcf -o vice-cbm.pcf vice-cbm.bdf ; \
 	rm vice-cbm.bdf ; \
 	mkfontdir .
